run_test_err.txt
Tue Apr  7 23:01:21 BST 2015
Already on 'dev'
From https://github.com/agnwinds/python
 * branch            dev        -> FETCH_HEAD
usage: cp [-R [-H | -L | -P]] [-fi | -n] [-apvX] source_file target_file
       cp [-R [-H | -L | -P]] [-fi | -n] [-apvX] source_file ... target_directory
make: mpicc: Command not found
/bin/sh: mpicc: command not found
expr: syntax error
make: mpicc: Command not found
/bin/sh: mpicc: command not found
expr: syntax error
make: mpicc: Command not found
make: *** [python.o] Error 127
make: mpicc: Command not found
/bin/sh: mpicc: command not found
expr: syntax error
make: mpicc: Command not found
/bin/sh: mpicc: command not found
expr: syntax error
make: mpicc: Command not found
make: *** [py_wind.o] Error 127
make: mpicc: Command not found
/bin/sh: mpicc: command not found
expr: syntax error
/Users/jmatthews/Documents/pyregress/scripts/run_test: line 49: Setup_Py_Dir: command not found
env: python\r: No such file or directory
  File "/Users/jmatthews/Documents/pyregress/scripts/process.py", line 20
    print "DATE %s" DATE
                       ^
SyntaxError: invalid syntax
